# jackyman81.github.io

./: .nojekyll  CV.html  CV.qmd  Contact.html  Contact.qmd  Projects.html  Projects.qmd  README.md  _quarto.yml  about.html  about.qmd  index.html  index.qmd  jackyman_system.info.docx  jackyman_system.info.html  jackyman_system.info.qmd  pyproject.toml  requirements.txt  robots.txt  search.json  sitemap.xml  styles.css
_site/: CV.html  Contact.html  Projects.html  about.html  index.html  jackyman_system.info.docx  jackyman_system.info.html  search.json
jackyman81.github.io/: _quarto.yml  index.qmd
jackyman81.github.io/_site/: about.html
