[project]
name = "jackyman81-github-io"
version = "0.0.1"
description = "initial website for jacky man"
authors = [
    {name = "jackyman81",email = "267191319+jackyman81@users.noreply.github.com"}
]
readme = "README.md"
requires-python = "^3.13"
dependencies = [
    "numpy (>=2.4.3,<3.0.0)",
    "pandas (>=3.0.1,<4.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "plotly (>=6.6.0,<7.0.0)"
]

[tool.poetry]
packages = [{include = "jackyman81"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
